# GRH-verification

./: .gitignore  CMakeLists.txt  README.md  driver.py  example_config.json  pipeline.py  pyproject.toml  requirements.txt  test_log_derivative.py
data/: intervals.txt  kronecker.txt  von_mangoldt.txt  zeros.txt
grhverify/: __init__.py  base_case.py
grhverify/utils/: discriminant.py  generate_zeros.py  kronecker_symbol.py  von_mangoldt.py
results/: first_zero.csv  summary.csv
script/: compute_kronecker.py  compute_kronecker_symbol.py  compute_lambda.py  compute_von_mangoldt.py  generate_zeros.py  pipeline.py  zeros.py
src/: pybind.cpp  rh_test.cpp  rh_verification.cpp  rh_verify  rh_verify.cpp
src/grhverify/: base_case.py
src/grhverify/utils/: generate_zeros.py
src/include/: rh_verification.hpp
tests/: test_log_derivative.py
utils/: kronecker_symbol.py  von_mangoldt.py
